# open-notebook

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Dockerfile  Dockerfile.single  Docker快速启动指南.md  MAINTAINER_GUIDE.md  Makefile  OpenAI_Base_URL配置指南.md  README.dev.md  README.md  docker-compose.full.yml  docker-compose.single.yml  docker-compose.yml  mypy.ini  pyproject.toml  supervisord.conf  supervisord.single.conf  中转站配置说明.md  测试和使用指南.md  项目拆解文档.md
.github/workflows/: build-dev.yml  claude-code-review.yml
api/: CLAUDE.md  auth.py  chat_service.py  client.py  context_service.py  embedding_service.py  episode_profiles_service.py  insights_service.py  main.py  models_service.py  notebook_service.py  notes_service.py  podcast_service.py  search_service.py  settings_service.py  sources_service.py  transformations_service.py
api/routers/: auth.py  chat.py  commands.py  config.py  context.py  embedding.py  embedding_rebuild.py  episode_profiles.py  insights.py  models.py  notes.py  podcasts.py  search.py  settings.py  source_chat.py  sources.py  speaker_profiles.py  transformations.py
commands/: CLAUDE.md  embedding_commands.py  example_commands.py  podcast_commands.py  source_commands.py
docs/: index.md
docs/0-START-HERE/: index.md  quick-start-cloud.md  quick-start-local.md  quick-start-openai.md
docs/1-INSTALLATION/: docker-compose.md  from-source.md  index.md  single-container.md
docs/2-CORE-CONCEPTS/: ai-context-rag.md  chat-vs-transformations.md  index.md  notebooks-sources-notes.md  podcasts-explained.md
docs/3-USER-GUIDE/: adding-sources.md  chat-effectively.md  citations.md  creating-podcasts.md  index.md  interface-overview.md  search.md  transformations.md  working-with-notes.md
docs/4-AI-PROVIDERS/: index.md
docs/5-CONFIGURATION/: advanced.md  ai-providers.md  database.md  environment-reference.md  index.md  local-tts.md  mcp-integration.md  ollama.md  openai-compatible.md  reverse-proxy.md  security.md
docs/6-TROUBLESHOOTING/: ai-chat-issues.md  connection-issues.md  faq.md  index.md  quick-fixes.md
docs/7-DEVELOPMENT/: api-reference.md  architecture.md  code-standards.md  contributing.md  design-principles.md  development-setup.md  (+4 more)
frontend/: next.config.ts  package-lock.json  package.json  start-server.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
open_notebook/: CLAUDE.md
prompts/: CLAUDE.md
scripts/: export_docs.py
setup_guide/: docker.env
tests/: test_domain.py  test_graphs.py  test_models_api.py  test_utils.py
(+170 files in other folders)
